Fixed text overflow and updated styling

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,24 @@
+body {
+    margin: 1.5vh 0 0 0;
+}
+
 #container {
-    background-color: thistle;
-    height: 98vh;
-    width: 98vw;
+    height: 96vh;
+    width: 96vw;
     margin: auto;
-    border: 1px solid black;
+    border: 4px solid white;
+    box-shadow: 0 0 4px 4px #d0d0d0;
+    border-radius: 8px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-areas: "display display display display" "clear backspace divide multiply" "seven eight nine subtract" "four five six add" "one two three add" "zero decimal evaluate evaluate";
+    grid-template-areas: 
+        "display display display display" 
+        "clear backspace divide multiply" 
+        "seven eight nine subtract" 
+        "four five six add" 
+        "one two three add" 
+        "zero decimal evaluate evaluate";
 }
 
 @media (min-width: 1000px) {
@@ -17,6 +28,9 @@
 }
 
 #display {
+    border: 1px solid white;
+    border-radius: 8px;
+    background-color: #949BA0;
     grid-area: display;
     display: flex;
     flex-direction: column;
@@ -39,18 +53,46 @@
 }
 
 #display #sub-display span {
-    width: 99%;
+    width: 98%;
     font-size: 2vh;
+    font-family: 'Crimson Text', serif;
+    font-weight: 500;
 }
 
 #display #main-display span {
-    width: 99%;
-    font-size: 10vh;
+    width: 98%;
+    font-size: 8vh;
+    font-family: 'Crimson Text', serif;
+    font-weight: 700;
 }
 
 button {
     border: 1px solid white;
+    border-radius: 8px;
+    outline-width: 0;
     font-size: 6vh;
+    font-family: 'Crimson Text', serif;
+    font-weight: 700;
+}
+
+button:hover {
+    background-color: #D07E68;
+}
+
+button:active {
+    background-color: #AE472C;
+}
+
+.erase {
+    background-color: #7A9E7E;
+}
+
+.operator {
+    background-color: #9DACB2;
+}
+
+.digit {
+    background-color: #BCD4DE;
 }
 
 #clear {
@@ -59,6 +101,8 @@ button {
 
 #back {
     grid-area: backspace;
+    font-size: 10vh;
+    padding-bottom: 3vh;
 }
 
 .divide {
